# git-workspace

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: releasing.md  releasing.zh-CN.md
examples/: workspace.example.yml
src/git_workspace/: __init__.py  cli.py  config.py  executor.py  git.py  models.py  output.py  planner.py  styles.py  terminal.py  tui.py  workspace.py
tests/: conftest.py  test_cli.py  test_config.py  test_executor.py  test_planner.py  test_terminal.py  test_tui.py  test_workflows.py  test_workspace.py
