[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "git-workspace-tui"
version = "0.1.2"
description = "Git-aware multi-repo terminal workspace"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "liusheng22" }
]
keywords = ["git", "workspace", "tui", "terminal", "multi-repo"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
  "pyyaml>=6.0.2",
  "rich>=13.7",
  "textual>=0.86",
]

[project.urls]
Homepage = "https://github.com/liusheng22/git-workspace"
Repository = "https://github.com/liusheng22/git-workspace"
Issues = "https://github.com/liusheng22/git-workspace/issues"

[project.scripts]
gws = "git_workspace.cli:main"
g = "git_workspace.cli:main"

[dependency-groups]
dev = [
  "build>=1.2",
  "pytest>=8.2",
  "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/git_workspace"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
